--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,9 @@ Automat==0.7.0
 backports.functools-lru-cache==1.5
 beautifulsoup4==4.6.3
 blinker==1.4
+breadability==0.1.20
 bzr==2.8.0.dev1
-certifi==2018.11.29
+certifi==2019.3.9
 cffi==1.12.2
 chardet==3.0.4
 Cheetah3==3.1.0
@@ -25,6 +26,7 @@ decorator==4.3.0
 defusedxml==0.5.0
 diff-match-patch==20121119
 distro==1.3.0
+docopt==0.6.2
 entrypoints==0.2.3.post3
 enum34==1.1.6
 et-xmlfile==1.0.1
@@ -74,6 +76,7 @@ mock==2.0.0
 monotonic==1.5
 more-itertools==4.2.0
 networkx==2.1
+nltk==3.4
 numexpr==2.6.5
 numpy==1.14.5
 oauthlib==2.0.6
@@ -111,7 +114,7 @@ python-pptx==0.6.17
 pytz==2018.5
 pyusb==1.0.2
 pyxdg==0.25
-PyYAML==3.13
+PyYAML==5.1
 pyzmq==17.1.0
 queuelib==1.5.0
 requests==2.21.0
@@ -126,6 +129,7 @@ SOAPpy==0.12.22
 sortedcontainers==2.1.0
 statsmodels==0.8.0
 subprocess32==3.5.2
+sumy==0.7.0
 tables==3.4.4
 Twisted==18.9.0
 urllib3==1.24.1
